--- a/projects/exposition-server/public/css/uwa-iphone.css
+++ b/projects/exposition-server/public/css/uwa-iphone.css
@@ -89,6 +89,7 @@ a {
 .editContent {
     display:block;
     margin-bottom:0;
+    height: 100%;
 }
 
 
